# lazy-limiter

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: test.yml
.github/workflows/: test.yml
src/lazy_limiter/: __init__.py  base.py  keyed_rate_limiter.py  keyed_token_bucket.py  sliding_window.py  token_bucket.py
tests/: conftest.py  test_base.py  test_keyed_rate_limiter.py  test_keyed_token_bucket.py  test_sliding_window.py  test_token_bucket.py  utils.py
tests/unit/: conftest.py  test_token_bucket.py
