[project]
name = "lazy-limiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eli", email = "eli.chandler@gmail.com" }
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
